Restructured `ResolvedMediaInfo` to support multiple parameters
